crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@variables_in_cairo_m___constants.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Variables in Cairo-M - Constants"
input_file: mdtest/01-basics/02-variables.md
---
Source:
const POW2: [u32; 3] = [1, 2, 4];

fn test_const() -> u32 {
    return POW2[0] + POW2[1] + POW2[2];
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_const {
    entry: 0

    0:
      %0 = makefixedarray [1, 2, 4]
      %1 = load %0[0]
      %2 = makefixedarray [1, 2, 4]
      %3 = load %2[1]
      %4 = %1 U32Add %3
      %5 = makefixedarray [1, 2, 4]
      %6 = load %5[2]
      %7 = %4 U32Add %6
      return %7

  }

}
