crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@variables_in_cairo_m___multiple_variables.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Variables in Cairo-M - Multiple Variables"
input_file: mdtest/01-basics/02-variables.md
---
Source:
fn test_multiple_vars() -> felt {
    let a = 10;
    let b = 20;
    let c = 30;
    let d = 40;
    return a + b + c + d;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_multiple_vars {
    entry: 0

    0:
      %0 = 10
      %1 = 20
      %2 = 30
      %3 = 40
      %4 = %0 + %1
      %5 = %4 + %2
      %6 = %5 + %3
      return %6

  }

}
