crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@variables_in_cairo_m___variable_declaration.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Variables in Cairo-M - Variable Declaration"
input_file: mdtest/01-basics/02-variables.md
---
Source:
fn test_variable() -> felt {
    let x = 10;
    let y = 20;
    return x + y;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_variable {
    entry: 0

    0:
      %0 = 10
      %1 = 20
      %2 = %0 Add %1
      return %2

  }

}
