crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@variables_in_cairo_m___variable_mutation.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Variables in Cairo-M - Variable Mutation"
input_file: mdtest/01-basics/02-variables.md
---
Source:
fn test_mutation() -> felt {
    let x = 5;
    x = x + 1;
    return x;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_mutation {
    entry: 0

    0:
      %0 = 5
      %1 = %0 Add 1
      store %0, %1
      return %0

  }

}
