crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@variables_in_cairo_m___variable_shadowing.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
assertion_line: 50
description: "MIR snapshot for mdtest: Variables in Cairo-M - Variable Shadowing"
input_file: mdtest/01-basics/02-variables.md
---
Source:
fn test_shadowing() -> felt {
    let x = 5;
    let x = x + 1;
    let x = x * 2;
    return x;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_shadowing {
    entry: 0

    0:
      %0 = 5
      %1 = %0 + 1
      %2 = %1 * 2
      return %2

  }

}

